--- a/styles/style.css
+++ b/styles/style.css
@@ -6,6 +6,17 @@
     font-family: 'Work Sans', sans-serif;
 }
 
+.btn-primary{
+    border-radius: 8px;
+    color: #fff;
+    background: #ff900e;
+    padding: 20px 25px;
+    font-size: 1.25rem;
+    color: #fff;
+    cursor: pointer;
+    border: 0;
+}
+
 header{
     background: rgba(255, 144, 14, 0.10);
     padding: 50px 240px;
@@ -56,3 +67,33 @@ nav li a{
     color: #727272;
 }
 
+.banner img{
+    margin-top: 20px;
+    width: 100%;
+}
+
+/* responsive media style */
+/* mobile devices */
+@media screen and (max-width: 576px) {
+    header{
+        padding: 20px;
+    }
+    nav{
+        flex-direction: column;
+    }
+    .banner-title {
+        font-size: 2.8rem;
+        font-weight: 700;
+        color: #131313;
+    }
+}
+
+/* tablet or medium devices */
+@media screen and (min-width:576px) and (max-width: 960px) {
+    header{
+        padding: 50px;
+    }
+    nav{
+        flex-direction: column;
+    }
+}
