--- a/styles/style.css
+++ b/styles/style.css
@@ -26,7 +26,7 @@
     color: #131313;
 }
 
-/* header sectin */
+/* header section */
 header{
     background: rgba(255, 144, 14, 0.10);
     padding: 50px 240px;
@@ -113,8 +113,46 @@ main{
     font-weight: 700;
 }
 
+/* facts container */
+.facts-card-container{
+    display: flex;
+    justify-content: space-around;
+}
+.facts-card-container .card{
+    border-radius: 8px;
+    border: 1px solid #ff900e;
+    text-align: center;
+    padding: 40px 30px;
+}
 
+.facts-card-container .card-title{
+    font-weight: 600;
+    font-size: 1.35rem;
+    margin-top: 5px;
+}
 
+.facts-card-container .card-stats{
+    font-size: 2.8rem;
+    color: #424242;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+/* sponsors styles */
+.sponsors{
+    text-align: center;
+}
+
+.sponsors-img-container{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 50px;
+    gap: 20px;
+    align-items: center;
+}
+
+.sponsors-img-container img{
+    width: 165px;
+}
 
 
 
@@ -129,7 +167,9 @@ main{
     }
 
     nav,
-    .teams-container
+    .teams-container,
+    .facts-card-container,
+    .sponsors-img-container
     {
         flex-direction: column;
     }
@@ -144,9 +184,12 @@ main{
         grid-template-columns: 1fr;
     }
     
-    .teams-content{
+    .teams-content, .facts-card-container{
         padding-left: 30px;
         padding-right: 30px;
+    }
+    .facts-card-container{
+        gap: 20px;
     }
 }
 
@@ -156,7 +199,9 @@ main{
         padding: 50px;
     }
 
-    nav, .teams-container{
+    nav, .teams-container,
+    .sponsors-img-container
+    {
         flex-direction: column;
     }
 }
