--- a/styles/style.css
+++ b/styles/style.css
@@ -113,6 +113,60 @@ main{
     font-weight: 700;
 }
 
+/* feature section styles */
+.features{
+    margin-top: 130px;
+    display: flex;
+    gap: 100px;
+
+}
+
+.feature-content .card{
+    padding: 30px;
+    margin-bottom: 20px;
+    border-radius: 8px;
+    background: #fff;
+    box-shadow: 0px 4px 30px 0px rgba(0,0,0,0.06);
+}
+
+.feature-img img{
+    height: 90%;
+    margin-left: 90px;
+}
+
+.ten-years-badge{
+    border-radius: 8px;
+    background: #ff900e;
+    color: #fff;
+    width: 342px;
+    padding: 40px;
+    text-align: center;
+    position: relative;
+    bottom: 100px;
+
+}
+
+.ten-years-badge h2{
+    font-size: 4rem;
+    margin: 0;
+}
+
+.ten-years-badge p{
+    font-size: 1.5rem;
+    margin: 0;
+
+}
+
+.features .section-title{
+    border-left: 5px solid #ff900e;
+    padding-left: 20px;
+}
+
+h4{
+    font-size: 20px;
+    font-weight: 600;
+}
+
 /* facts container */
 .facts-card-container{
     display: flex;
@@ -159,6 +213,11 @@ main{
 
 
 
+
+
+
+
+
 /* responsive media style */
 /* mobile devices */
 @media screen and (max-width: 576px) {
@@ -168,10 +227,21 @@ main{
 
     nav,
     .teams-container,
+    .features,
     .facts-card-container,
     .sponsors-img-container
     {
         flex-direction: column;
+    }
+
+    .feature-img img{
+        width: 90%;
+        margin-left: 0;
+    }
+
+    .ten-years-badge{
+        position: static;
+        max-width: 300px;
     }
 
     .banner-title {
@@ -199,9 +269,11 @@ main{
         padding: 50px;
     }
 
-    nav, .teams-container,
-    .sponsors-img-container
-    {
+    nav,
+    .features,
+    .teams-container,
+    .sponsors-img-container{
         flex-direction: column;
     }
+    
 }
